# Sui_Faucet

./: .gitignore  Cargo.toml  README.md  REDEME.md  package.json  pnpm-lock.yaml  tes.http
src/: App.tsx  RequestFaucet.tsx  main.rs  networkConfig.ts  test.http
