[package]
name = "sui-faucet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0",features = ["full"] }
axum = "0.7.5"
serde = {version = "1.0.202",features = ["derive"]}
serde_json = "^1.0.116"
serde_derive = "^1.0.116"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0.40"


[profile.release]
# 增量编译，优化build慢问题
incremental = true

[source.crates-io]
# cargo install crm, 镜像源管理工具
registry = "https://github.com/rust-lang/crates.io-index"
replace-with = 'tuna'

[source.tuna]
registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"
[source.rsproxy]
registry = "https://rsproxy.cn/crates.io-index"
